syntax = "proto3";

package trade;

option go_package = "contracts.trade";

service Trade {
    rpc Start(StartRequest) returns (StartResponse);
    rpc Stop(StopRequest) returns (StopResponse);
    rpc SetInstrument(SetInstrumentRequest) returns (SetInstrumentResponse);
}

message StartRequest {
    string Strategy = 1;
    string InstrumentId = 2;   
}

message StartResponse {
    bool Ok = 1;
    string Error = 2;
}

message StopRequest {
    string Strategy = 1;
    string InstrumentId = 2;
}

message StopResponse {
    bool Ok = 1;
    string Error = 2;
}

message ChangeConfigRequest {
    string Strategy = 1;
    string InstrumentId = 2;
    string Config = 3;
}

message ChangeConfigResponse {
    bool Ok = 1;
    string Error = 2;
}

message SetInstrumentRequest {
    string InstrumentId = 1;
}

message SetInstrumentResponse {
    bool Ok = 1;
}